Made some small changes